fixed a funky z-index bug in create session technical info dialog box of beacon

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -486,8 +486,7 @@ input, button { border:none; }
   padding: 8px 8px 16px 8px;
   transition: box-shadow .2s, transform .2s;
   margin:16px;
-
-  z-index: 0;
+  
   opacity: 1;
 
   animation-iteration-count: 1;
@@ -655,7 +654,7 @@ input, button { border:none; }
   bottom: 0;
   overflow: hidden;
   background-color: rgba(0,0,0,0.5);
-  z-index:101;
+  z-index:10000;
 }
 
 .selected-beacons-container {
